exepert review jump link fixed

--- a/BikeWale.UI/sass/modules/_carousel-card.sass
+++ b/BikeWale.UI/sass/modules/_carousel-card.sass
@@ -31,10 +31,10 @@
 					position: absolute
 					top: 0
 					left: 0
-					background: linear-gradient(to left, rgba(255, 255, 255, 0), #ffffff)
-					background: -webkit-linear-gradient(right, rgba(255, 255, 255, 0), #ffffff)
-					background: -o-linear-gradient(left, rgba(255, 255, 255, 0), #ffffff)
-					background: -moz-linear-gradient(right, rgba(255, 255, 255, 0), #ffffff)
+					background: -webkit-linear-gradient(right, rgba(255, 255, 255, 0), #fff)
+					background: -o-linear-gradient(left, rgba(255, 255, 255, 0), #fff)
+					background: -moz-linear-gradient(right, rgba(255, 255, 255, 0), #fff)
+					background: linear-gradient(to left, rgba(255, 255, 255, 0), #fff)
 					z-index: 2
 				&:after
 					content: ''
@@ -44,10 +44,10 @@
 					position: absolute
 					top: 0
 					right: 0
-					background: linear-gradient(to right, rgba(255, 255, 255, 0), #ffffff)
-					background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0), #ffffff)
-					background: -o-linear-gradient(right, rgba(255, 255, 255, 0), #ffffff)
-					background: -moz-linear-gradient(left, rgba(255, 255, 255, 0), #ffffff)
+					background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0), #fff)
+					background: -o-linear-gradient(right, rgba(255, 255, 255, 0), #fff)
+					background: -moz-linear-gradient(left, rgba(255, 255, 255, 0), #fff)
+					background: linear-gradient(to right, rgba(255, 255, 255, 0), #fff)
 					z-index: 2
 
 				li
